Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-13518

QFontDatabase do not see font styles other than regular, italic or/and bold on Mac

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.8.0
    • 4.6.0, 4.6.1, 4.6.2, 4.6.3, 4.7.0
    • GUI: Font handling
    • None
    • MacOS X 10.6.4
    • macOS
    • c99457e1ecfa2099f71e78fe4fe1afc89d64e0c1

    Description

      This issue is somehow related to QTBUG-736.

      I am trying to list the fonts available on my system and would like to have the available styles related to a font family. On Mac, QFontDatabase::styles only replies with either "Normal" or "Italic" or "Bold" or "Bold Italic" even if the fonts themselves have other styles defined. For example Helvetica has "Oblique" which is translated by Qt as "Italic". Helvetica Neue has 11 styles, including "Light", "UltraLight", "Medium", "Condensed Black" and Qt only sees the 4 standard "Normal", "Italic", "Bold" and "Bold Italic".

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jiang Jiang Jiang
            schffhsr Lionel Schaffhauser
            Votes:
            5 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes